--- a/Frontend/src/app/ui/layout/main/main.component.html
+++ b/Frontend/src/app/ui/layout/main/main.component.html
@@ -1,6 +1,6 @@
 <div class="content-container">
   <div class="content-area">
-    <ng-content></ng-content>
+    <router-outlet></router-outlet>
   </div>
   <app-sidebar class="sidenav"></app-sidebar>
 </div>
