--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+.center {
+  margin-top: 20%;
+  text-align: center;
+}
+
+*:focus {
+  outline: none;
+  border-color: inherit;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
