--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -4,9 +4,11 @@
   text-align: center;
 }
 
-*:focus {
-  outline: none;
-  border-color: inherit;
-  -webkit-box-shadow: none;
-  box-shadow: none;
+* {
+  &:focus {
+    outline: none;
+    border-color: inherit;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+  }
 }
