Added service and namespaces

--- a/Frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/Frontend/src/app/pages/dashboard/dashboard.component.html
@@ -23,7 +23,7 @@
       </div>
       <div class="card-block">
         <div class="progress top">
-          <progress value="0" max="100" id="bar" style="color: green"></progress>
+          <progress value="0" max="100" id="bar"></progress>
         </div>
         Diese Aufträge stehen heute an:
       </div>
