Added login guard, different design changes

--- a/Frontend/src/app/ui/layout/header/header.component.html
+++ b/Frontend/src/app/ui/layout/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="branding">
     <a [routerLink]="['/']" class="nav-link">
       <clr-icon shape="shield"></clr-icon>
-      <span class="title">Angular CLI</span>
+      <span class="title">Dashboard</span>
     </a>
   </div>
   <div class="header-nav">
