--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-.center {
+.index_loading_center {
   margin-top: 20%;
   text-align: center;
 }
