--- a/Frontend/src/app/pages/login/login.component.html
+++ b/Frontend/src/app/pages/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="login-wrapper">
-  <form class="login" (ngSubmit)="validate()">
+  <form class="login" (ngSubmit)="submit(form)">
     <section class="title">
       <h3 class="welcome">Welcome to</h3>
       X Dashboard
