Continued working on design

--- a/Frontend/src/app/ui/layout/main/main.component.html
+++ b/Frontend/src/app/ui/layout/main/main.component.html
@@ -2,5 +2,5 @@
   <div class="content-area">
     <router-outlet></router-outlet>
   </div>
-  <app-sidebar class="sidenav"></app-sidebar>
+  <app-sidebar class="sidenav" id="sidebar"></app-sidebar>
 </div>
