--- a/Frontend/src/app/ui/layout/sidebar/sidebar.component.html
+++ b/Frontend/src/app/ui/layout/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<nav>
+<nav id="sidebar">
   <section class="sidenav-content">
     <a class="nav-link active">Overview</a>
     <section class="nav-group collapsible">
@@ -18,4 +18,6 @@
       </ul>
     </section>
   </section>
+
+  <button (click)="close()">hmm</button>
 </nav>
