Continued working on dashboard etc

--- a/Frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/Frontend/src/app/pages/dashboard/dashboard.component.html
@@ -1,2 +1,3 @@
 <dashboard-panel></dashboard-panel>
 <dashboard-todos></dashboard-todos>
+<dashboard-employees [employees]="employees"></dashboard-employees>
