--- a/Frontend/src/app/pages/page-not-found/page-not-found.component.html
+++ b/Frontend/src/app/pages/page-not-found/page-not-found.component.html
@@ -1,3 +1,4 @@
 <div class="fof">
-    <h1>Error 404</h1>
+    <h1>Fehler 404</h1>
+    <p>Es tut uns leid, aber die von Ihnen angeforderte Seite existiert nicht oder wurde gelöscht!</p>
 </div>
