--- a/Frontend/src/app/ui/layout/header/header.component.html
+++ b/Frontend/src/app/ui/layout/header/header.component.html
@@ -1,4 +1,9 @@
 <header class="header-1">
+  <!--<div class="header-nav">
+    <a class="nav-link" (click)="toggleSidebar()">
+      <clr-icon shape="bars"></clr-icon>
+    </a>
+  </div>-->
   <div class="branding">
     <a [routerLink]="['/']" class="nav-link">
       <clr-icon shape="shield"></clr-icon>
