--- a/Frontend/src/app/ui/layout/sidebar/sidebar.component.html
+++ b/Frontend/src/app/ui/layout/sidebar/sidebar.component.html
@@ -14,7 +14,7 @@
       <label for="tabexample2">System</label>
       <ul class="nav-list">
         <li><a class="nav-link">Users</a></li>
-        <li><a class="nav-link">Settings</a></li>
+        <li><a class="nav-link" href="/settings">Einstellungen</a></li>
       </ul>
     </section>
   </section>
