More components and stuff

--- a/Frontend/src/app/pages/dashboard/employees/employees.component.html
+++ b/Frontend/src/app/pages/dashboard/employees/employees.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="employees?.length">
+<ng-container *ngIf="employees?.length && valid">
     <h2>Anwesende Mitarbeiter</h2>
     <clr-datagrid>
         <clr-dg-column>Personalnummer</clr-dg-column>
