--- a/Frontend/src/app/pages/forms/login/login.component.html
+++ b/Frontend/src/app/pages/forms/login/login.component.html
@@ -18,7 +18,7 @@
               Invalid user name or password
           </div>
           <button type="submit" class="btn btn-primary">Abschicken</button>
-          <a href="/register" class="signup">Registrieren</a>
+          <a routerLink="/register" class="signup">Registrieren</a>
       </div>
   </form>
 </div>
