--- a/Frontend/src/app/pages/settings/settings.component.html
+++ b/Frontend/src/app/pages/settings/settings.component.html
@@ -1,1 +1,6 @@
-<h1>Settings</h1>
+<h1>Einstellungen</h1>
+<br />
+<hr />
+<h2>Account Daten ändern</h2>
+<change-account-settings id="account" [input]="changeEmail"></change-account-settings>
+<hr />
