--- a/Frontend/src/app/pages/forms/register/register.component.html
+++ b/Frontend/src/app/pages/forms/register/register.component.html
@@ -31,7 +31,7 @@
             </clr-password-container>
             <form-error [error]="err"></form-error>
             <button type="submit" class="btn btn-primary">Registrieren</button>
-            <a href="/login" class="signup">Login</a>
+            <a routerLink="/login" class="signup">Login</a>
         </div>
     </form>
 </div>
