--- a/Frontend/src/app/pages/settings/settings.component.html
+++ b/Frontend/src/app/pages/settings/settings.component.html
@@ -2,5 +2,8 @@
 <br />
 <hr />
 <h2>Account Daten ändern</h2>
-<change-account-settings id="account" [input]="changeEmail"></change-account-settings>
+<div id="wrapper">
+    <change-account-settings id="left" [input]="changeEmail"></change-account-settings>
+    <change-account-settings id="right" [input]="changePassword"></change-account-settings>
+</div>
 <hr />
