--- a/Frontend/src/app/pages/settings/account/account.component.html
+++ b/Frontend/src/app/pages/settings/account/account.component.html
@@ -2,11 +2,11 @@
 
   <clr-input-container *ngFor="let i of input">
     <label>{{i.label}}</label>
-    <input clrInput formControlName="email" type="{{i.type}}" />
-    <ng-container *ngIf="i.error.type === 'required'">
-        <clr-control-error *clrIfError="'required'">{{i.error.message}}</clr-control-error>
-    </ng-container>
+    <input clrInput formControlName="{{i.type}}" type="{{i.type}}" />
+    <clr-control-error *clrIfError="'required'">{{i.error.message}}</clr-control-error>
   </clr-input-container>
 
+  <br />
+  
   <button class="btn">Ändern</button>
 </form>
