--- a/Frontend/src/app/pages/settings/settings.component.scss
+++ b/Frontend/src/app/pages/settings/settings.component.scss
@@ -3,12 +3,12 @@
 
     #left {
         float:left;
+        width: 30%;
     }
 
-    #second {
-        overflow: hidden;
-        margin-left: 50%;
-        float: right
+    #right {
+        float: left;
+        width: 50%;
     }
 }
 
