Added comments, new service, etc.

--- a/Frontend/src/app/pages/settings/select/select.component.html
+++ b/Frontend/src/app/pages/settings/select/select.component.html
@@ -1,1 +1,5 @@
-<p>select works!</p>
+<select clrSelect name="options" class="select">
+    <option value="one">One</option>
+    <option value="two">Two</option>
+    <option value="three">Three</option>
+  </select>
