--- a/Frontend/src/app/pages/settings/settings.component.html
+++ b/Frontend/src/app/pages/settings/settings.component.html
@@ -1,9 +1,14 @@
-<h1>Einstellungen</h1>
-<br />
-<hr />
-<h2>Account Daten ändern</h2>
-<div id="wrapper">
-    <change-account-settings id="left" [input]="changeEmail" [onSubmit]="validateEmail"></change-account-settings>
-    <change-account-settings id="right" [input]="changePassword" [onSubmit]="validatePassword"></change-account-settings>
+<div id="settings">
+  <h1>Einstellungen</h1>
+  <br />
+  <hr />
+  <h2>Account Daten ändern</h2>
+  <div id="wrapper">
+    <change-account-settings id="left" [input]="changeEmail" [onSubmit]="'email'"></change-account-settings>
+    <change-account-settings id="right" [input]="changePassword" [onSubmit]="'password'"></change-account-settings>
+  </div>
+  <hr />
+  <h2>Automatisches Logout</h2>
+  Warnung zeigen bei <settings-select></settings-select> Minuten <br />
+  Ausloggen bei <settings-select></settings-select> Minuten <br />
 </div>
-<hr />
