--- a/Frontend/src/app/pages/forms/register/register.component.html
+++ b/Frontend/src/app/pages/forms/register/register.component.html
@@ -28,7 +28,7 @@
             </clr-input-container>
             <clr-select-container>
                 <label class="clr-sr-only">Rechteklasse</label>
-                <select clrSelect name="type" [(ngModel)]="form.type" placeholder="Rechteklasse">
+                <select clrSelect name="type" [(ngModel)]="form.accessLevel" placeholder="Rechteklasse">
                     <option value="user">Benutzer</option>
                     <option value="admin">Administrator</option>
                     <option value="personalabteilung">Personalabteilung</option>
