--- a/Frontend/src/app/pages/settings/settings.component.html
+++ b/Frontend/src/app/pages/settings/settings.component.html
@@ -9,6 +9,14 @@
   </div>
   <hr />
   <h2>Automatisches Logout</h2>
-  Warnung zeigen bei <settings-select></settings-select> Minuten <br />
-  Ausloggen bei <settings-select></settings-select> Minuten <br />
+  <div id="wrapper">
+    <div id="left">
+      Warnung zeigen bei <settings-select></settings-select> Minuten 
+      <br />
+    </div>
+    <div id="right">
+      Ausloggen bei <settings-select></settings-select> Minuten 
+      <br />
+    </div>
+  </div>
 </div>
