--- a/Frontend/src/app/pages/settings/select/select.component.html
+++ b/Frontend/src/app/pages/settings/select/select.component.html
@@ -1,5 +1,7 @@
-<select clrSelect name="options" class="select">
-    <option value="one">One</option>
-    <option value="two">Two</option>
-    <option value="three">Three</option>
-  </select>
+<select clrSelect name="options" class="select" [(ngModel)]="select">
+    <option *ngFor="let o of options" [value]="o.value">{{o.text}}</option>
+</select>
+
+<br />
+
+<button (click)="changeSettings()" class="btn">Ändern</button>
