Some styling and validation

--- a/Frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/Frontend/src/app/pages/dashboard/dashboard.component.html
@@ -1,3 +1,5 @@
-<dashboard-panel></dashboard-panel>
-<dashboard-todos></dashboard-todos>
-<dashboard-employees [employees]="employees"></dashboard-employees>
+<div id="dashboard">
+    <dashboard-panel></dashboard-panel>
+    <dashboard-todos></dashboard-todos>
+    <dashboard-employees [employees]="employees"></dashboard-employees>
+</div>
