--- a/Frontend/src/app/ui/layout/main/main.component.html
+++ b/Frontend/src/app/ui/layout/main/main.component.html
@@ -1,6 +1,6 @@
 <div class="content-container">
   <app-sidebar id="innerSidebarSelector" class="left"></app-sidebar>
   <div class="content-area" id="content-area">
-    <router-outlet></router-outlet>
+    <router-outlet id="inner-content-area"></router-outlet>
   </div>
 </div>
