--- a/Frontend/src/app/pages/dashboard/panel/panel.component.html
+++ b/Frontend/src/app/pages/dashboard/panel/panel.component.html
@@ -1,4 +1,5 @@
-<clr-accordion [clrAccordionMultiPanel]="true" class="left">
+<div style="width: 100">
+  <clr-accordion [clrAccordionMultiPanel]="true" class="left">
     <clr-accordion-panel>
       <clr-accordion-title>Item 1</clr-accordion-title>
       <clr-accordion-content>Content 1</clr-accordion-content>
@@ -14,3 +15,4 @@
       <clr-accordion-content>Content 3</clr-accordion-content>
     </clr-accordion-panel>
   </clr-accordion>
+</div>
