--- a/Frontend/src/app/ui/layout/header/header.component.html
+++ b/Frontend/src/app/ui/layout/header/header.component.html
@@ -1,9 +1,4 @@
 <header class="header-1">
-  <!--<div class="header-nav">
-    <a class="nav-link" (click)="toggleSidebar()">
-      <clr-icon shape="bars"></clr-icon>
-    </a>
-  </div>-->
   <div class="branding">
     <a [routerLink]="['/']" class="nav-link">
       <clr-icon shape="shield"></clr-icon>
@@ -16,11 +11,11 @@
       <clr-icon [attr.shape]="headerLink.icon"></clr-icon>
     </a>
   </div>
-  <form class="search">
+  <!--<form class="search">
     <label for="search_input">
       <input id="search_input" type="text" placeholder="Search for keywords...">
     </label>
-  </form>
+  </form>-->
   <div class="header-actions dropdown bottom-right">
     <!--<clr-dropdown class="dropdown bottom-right">
       <button class="nav-icon" clrDropdownToggle>
