--- a/Frontend/src/app/pages/dashboard/employees/employees.component.html
+++ b/Frontend/src/app/pages/dashboard/employees/employees.component.html
@@ -5,12 +5,16 @@
         <clr-dg-column>Name</clr-dg-column>
         <clr-dg-column>Status</clr-dg-column>
         <clr-dg-column>Rechteklasse</clr-dg-column>
+        <clr-dg-column>Entfernen</clr-dg-column>
     
         <clr-dg-row *clrDgItems="let employee of employees">
             <clr-dg-cell>{{employee.personalnummer}}</clr-dg-cell>
             <clr-dg-cell>{{employee.vorname + " " + employee.name}}</clr-dg-cell>
             <clr-dg-cell>{{employee.status}}</clr-dg-cell>
             <clr-dg-cell>{{employee.rechteklasse}}</clr-dg-cell>
+            <clr-dg-cell>
+                <clr-icon shape="cross"></clr-icon>
+            </clr-dg-cell>
         </clr-dg-row>
     
         <clr-dg-footer>
