--- a/Frontend/src/app/ui/layout/sidebar/sidebar.component.html
+++ b/Frontend/src/app/ui/layout/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<clr-vertical-nav [clrVerticalNavCollapsible]="true">
+<clr-vertical-nav [clrVerticalNavCollapsible]="true" checked>
 
   <ng-container *ngFor="let current of sidebarLinks">
     <clr-vertical-nav-group routerLinkActive="active">
