--- a/Frontend/src/app/ui/layout/header/header.component.html
+++ b/Frontend/src/app/ui/layout/header/header.component.html
@@ -1,9 +1,6 @@
 <header class="header-1">
-  <div class="branding">
-    <a [routerLink]="['/']" class="nav-link">
-      <clr-icon shape="shield"></clr-icon>
-      <span class="title">Dashboard</span>
-    </a>
+  <div class="branding unselectable" unselectable="on">
+    <span class="title">TO BE DONE</span>
   </div>
   <div class="header-nav">
     <a *ngFor="let headerLink of headerLinks" [routerLink]="headerLink.link" routerLinkActive="active"
@@ -15,7 +12,7 @@
     <label for="search_input">
       <input id="search_input" type="text" placeholder="Search for keywords...">
     </label>
-  </form>-->
+  </form>--
   <div class="header-actions dropdown bottom-right">
     <!--<clr-dropdown class="dropdown bottom-right">
       <button class="nav-icon" clrDropdownToggle>
@@ -38,6 +35,6 @@
         <a clrDropdownItem>Link 1</a>
         <a clrDropdownItem>Link 2</a>
       </clr-dropdown-menu>
-    </clr-dropdown>-->
-  </div>
+    </clr-dropdown>--
+  </div>-->
 </header>
