--- a/Frontend/src/app/ui/layout/layout.component.html
+++ b/Frontend/src/app/ui/layout/layout.component.html
@@ -1,6 +1,6 @@
-<div class="main-container">
-    <app-header></app-header>
-    <app-main class="u-main-container">
-      <ng-content></ng-content>  
-    </app-main>
-</div>
+<clr-main-container>
+  <clr-header>
+    <app-header class="header-nav"></app-header>
+  </clr-header>
+  <app-main class="content-container"></app-main>
+</clr-main-container>
