--- a/Frontend/src/app/pages/settings/select/select.component.scss
+++ b/Frontend/src/app/pages/settings/select/select.component.scss
@@ -1,7 +1,5 @@
-@media only screen and (max-width: 780px){
+@media only screen and (max-width: 768px){
     #select-box {
-        display: block !important;
-        margin: 0 auto !important;
-        text-align: center !important;
+        margin-left: 20%;
     }
 }
