--- a/Frontend/src/app/pages/employee-stats/employee-stats.component.html
+++ b/Frontend/src/app/pages/employee-stats/employee-stats.component.html
@@ -18,6 +18,14 @@
               <td>Abteilung:</td>
               <td>{{user.abteilung}}</td>
             </tr>
+            <tr>
+              <td>Vertreter:</td>
+              <td>{{user.vertreter}}</td>
+            </tr>
+            <tr>
+              <td>Arbeitskonto:</td>
+              <td>{{user.arbeitskonto}} Stunden</td>
+            </tr>
           </table>
         </div>
       </div>
@@ -34,6 +42,19 @@
             <tr>
               <td>Status</td>
               <td>{{user.status}}</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+      <div class="card-block">
+        <div class="card-title">
+          System-Intern
+        </div>
+        <div class="card-text">
+          <table>
+            <tr>
+              <td>Rechteklasse:</td>
+              <td>{{user.rechteklasse}}</td>
             </tr>
           </table>
         </div>
