--- a/Frontend/src/app/ui/layout/sidebar/sidebar.component.html
+++ b/Frontend/src/app/ui/layout/sidebar/sidebar.component.html
@@ -8,6 +8,7 @@
       <clr-vertical-nav-group-children *clrIfExpanded="current === sidebarLinks[0]">
         <ng-container *ngFor="let sub of current.links">
           <a clrVerticalNavLink routerLink="{{sub.link}}" routerLinkActive="active">
+            <clr-icon [attr.shape]="sub.icon"></clr-icon>
             {{sub.title}}
           </a>
         </ng-container>
@@ -24,7 +25,7 @@
     </a>
   </ng-container>
 
-  <a clrVerticalNavLink routerLinkActive="active" routerLink="./credit">
+  <a clrVerticalNavLink routerLinkActive="active" routerLink="./credits">
     <clr-icon shape="certificate" clrVerticalNavIcon></clr-icon>
     Credit
   </a>
