--- a/Frontend/src/app/pages/dashboard/employees/employees.component.html
+++ b/Frontend/src/app/pages/dashboard/employees/employees.component.html
@@ -1,11 +1,13 @@
 <ng-container *ngIf="employees?.length && valid">
-    <h2>Anwesende Mitarbeiter</h2>
+    
+    <h2>Mitarbeiter</h2>
+
     <clr-datagrid>
         <clr-dg-column>Personalnummer</clr-dg-column>
         <clr-dg-column>Name</clr-dg-column>
         <clr-dg-column>Status</clr-dg-column>
         <clr-dg-column>Rechteklasse</clr-dg-column>
-        <clr-dg-column>Entfernen</clr-dg-column>
+        <clr-dg-column>Anwesend</clr-dg-column>
     
         <clr-dg-row *clrDgItems="let employee of employees">
             <clr-dg-cell>{{employee.personalnummer}}</clr-dg-cell>
@@ -17,7 +19,8 @@
             <clr-dg-cell>{{employee.status}}</clr-dg-cell>
             <clr-dg-cell>{{employee.rechteklasse}}</clr-dg-cell>
             <clr-dg-cell>
-                <clr-icon shape="cross"></clr-icon>TODO
+                <clr-icon shape="check" *ngIf="employee.erreichbar"></clr-icon>
+                <clr-icon shape="times" *ngIf="!employee.erreichbar"></clr-icon>
             </clr-dg-cell>
         </clr-dg-row>
     
@@ -28,5 +31,7 @@
                 von {{pagination.totalItems}} Angestellten insgesamt
             </clr-dg-pagination>
         </clr-dg-footer>
+
     </clr-datagrid>
+
 </ng-container>
