--- a/Frontend/src/app/pages/settings/account/account.component.html
+++ b/Frontend/src/app/pages/settings/account/account.component.html
@@ -5,10 +5,25 @@
       <label>{{i.label}}</label>
       <input clrInput formControlName="{{i.formControlName}}" type="{{i.type}}" />
       <clr-control-error *clrIfError="'required'">{{i.error.required}}</clr-control-error>
-      <clr-control-error *clrIfError="'minlength'">{{i.error.minLength | json}}</clr-control-error>
-      <clr-control-error *clrIfError="'passwordsNotEqual'">dfasdfiasdfgkl</clr-control-error>
+      <clr-control-error *clrIfError="'minlength'">{{i.error.minLength}}</clr-control-error>
+      <clr-control-error *clrIfError="'email'">{{i.error.email}}</clr-control-error>
     </clr-input-container>
   </ng-container>
+
+  <br />
+
+  <div class="alert alert-danger" role="alert" *ngIf="form.errors?.passwordsNotEqual" id="danger-alert">
+    <div class="alert-items">
+        <div class="alert-item static">
+            <div class="alert-icon-wrapper">
+                <clr-icon class="alert-icon" shape="exclamation-circle"></clr-icon>
+            </div>
+            <span class="alert-text">
+                Ihre eingegebenen Passwörter stimmen nicht überein!
+            </span>
+        </div>
+    </div>
+  </div>
 
   <br />
   
@@ -19,6 +34,3 @@
     Abrrechen
   </button>
 </form>
-
-<h2>{{form.errors | json}}</h2>
-<p>{{form.status}}</p>
