--- a/Frontend/src/app/pages/dashboard/employees/employees.component.html
+++ b/Frontend/src/app/pages/dashboard/employees/employees.component.html
@@ -1,37 +1,46 @@
 <ng-container *ngIf="employees?.length && valid">
     
     <h2>Mitarbeiter</h2>
+    <h1>{{isMobile}}</h1>
 
-    <clr-datagrid>
-        <clr-dg-column>Personalnummer</clr-dg-column>
-        <clr-dg-column>Name</clr-dg-column>
-        <clr-dg-column>Status</clr-dg-column>
-        <clr-dg-column>Rechteklasse</clr-dg-column>
-        <clr-dg-column>Anwesend</clr-dg-column>
-    
-        <clr-dg-row *clrDgItems="let employee of employees">
-            <clr-dg-cell>{{employee.personalnummer}}</clr-dg-cell>
-            <clr-dg-cell>
-                <a routerLink="/employee/{{employee.personalnummer}}">
-                    {{employee.vorname + " " + employee.name}}
-                </a>
-            </clr-dg-cell>
-            <clr-dg-cell>{{employee.status}}</clr-dg-cell>
-            <clr-dg-cell>{{employee.rechteklasse}}</clr-dg-cell>
-            <clr-dg-cell>
-                <clr-icon shape="check" *ngIf="employee.erreichbar"></clr-icon>
-                <clr-icon shape="times" *ngIf="!employee.erreichbar"></clr-icon>
-            </clr-dg-cell>
-        </clr-dg-row>
-    
-        <clr-dg-footer>
-            <clr-dg-pagination #pagination [clrDgPageSize]="10">
-                <clr-dg-page-size [clrPageSizeOptions]="[10,20,50,100]">Benutzer pro Seite</clr-dg-page-size>
-                {{pagination.firstItem + 1}} - {{pagination.lastItem + 1}}
-                von {{pagination.totalItems}} Angestellten insgesamt
-            </clr-dg-pagination>
-        </clr-dg-footer>
+    <ng-container *ngIf="!isMobile">
 
-    </clr-datagrid>
+        <clr-datagrid>
+            <clr-dg-column>Personalnummer</clr-dg-column>
+            <clr-dg-column>Name</clr-dg-column>
+            <clr-dg-column>Status</clr-dg-column>
+            <clr-dg-column>Rechteklasse</clr-dg-column>
+            <clr-dg-column>Anwesend</clr-dg-column>
+        
+            <clr-dg-row *clrDgItems="let employee of employees">
+                <clr-dg-cell>{{employee.personalnummer}}</clr-dg-cell>
+                <clr-dg-cell>
+                    <a routerLink="/employee/{{employee.personalnummer}}">
+                        {{employee.vorname + " " + employee.name}}
+                    </a>
+                </clr-dg-cell>
+                <clr-dg-cell>{{employee.status}}</clr-dg-cell>
+                <clr-dg-cell>{{employee.rechteklasse}}</clr-dg-cell>
+                <clr-dg-cell>
+                    <clr-icon shape="check" *ngIf="employee.erreichbar"></clr-icon>
+                    <clr-icon shape="times" *ngIf="!employee.erreichbar"></clr-icon>
+                </clr-dg-cell>
+            </clr-dg-row>
+        
+            <clr-dg-footer>
+                <clr-dg-pagination #pagination [clrDgPageSize]="10">
+                    <clr-dg-page-size [clrPageSizeOptions]="[10,20,50,100]">Benutzer pro Seite</clr-dg-page-size>
+                    {{pagination.firstItem + 1}} - {{pagination.lastItem + 1}}
+                    von {{pagination.totalItems}} Angestellten insgesamt
+                </clr-dg-pagination>
+            </clr-dg-footer>
+    
+        </clr-datagrid>
+
+    </ng-container>
+
+    <ng-container *ngIf="isMobile">
+        <dashboard-panel [employees]="employees"></dashboard-panel>
+    </ng-container>
 
 </ng-container>
